# dasImgui

./: .das_module  .das_package  .gitignore  API_REWORK.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.githooks/: README.md  pre-push
.github/workflows/: asan.yml  docs.yml  tests.yml
bind/: bind_imgui.das
commands/: imgui_commands.das
daslib/: imgui_boost.das  imnodes_boost.das
doc/source/: conf.py  daslang.py  icon_role.py  index.rst  internal_families.rst
example/: NodeEditor.json  imgui_demo.das  imgui_node_editor_basic.das  imgui_node_editor_stress.das  imgui_opengl2.das  imgui_opengl_aot.cpp  imgui_vulkan.das  imnode_editor.das
example/phase00_button/: main.das
example/phase0a_define_widget/: SMOKE.md  main.das
examples/features/: active_widget.das  align_text_to_frame_padding.das  await_quiescent.das  button_repeat.das  child_scroll_reenter.das  clip_rect.das  collapsing_header_closable.das  color_button_hover.das  columns_demo.das  containers_layout.das  containers_overlay.das  containers_window.das  data_table.das  disabled_block.das  display_image.das  display_progress.das  dock_basic.das  dockspace_in_window.das  drag_drop.das  drawlist.das  drawlist_channels.das  drawlist_path.das  dynamic_font_scale.das  edit_collapsing_header.das  edit_external_color.das  edit_external_combo.das  edit_external_scalars.das  edit_external_scalars_custom.das  edit_external_special.das  edit_external_toggles.das  edit_external_vectors.das  edit_menu_item.das  edit_tab_item.das  edit_vsliders.das  embedded_terminal.das  focus_control.das  focus_widget.das  font_stack.das  foundation.das  glfw_synth_keys.das  (+80 more)
examples/imgui_demo/: about.das  app_console.das  app_custom_rendering.das  app_dockspace.das  app_documents.das  app_log.das  app_main_menu.das  app_small.das  columns.das  harness_about.das  harness_app_custom_rendering.das  harness_app_dockspace.das  harness_app_documents.das  harness_app_main_menu.das  harness_app_small_auto_resize.das  harness_app_small_constrained_resize.das  harness_app_small_fullscreen.das  harness_app_small_layout.das  harness_app_small_long_text.das  harness_app_small_property_editor.das  harness_app_small_simple_overlay.das  harness_app_small_window_titles.das  harness_inputs.das  harness_layout.das  harness_style_editor.das  harness_tables.das  harness_widgets.das  imgui_demo.das  inputs.das  layout.das  main.das  popups.das  style_editor.das  tables.das  user_guide.das  widgets.das
examples/save_demo/: main.das
examples/tutorial/: application_lifecycle.das  boost_basics.das  buttons.das  child.das  collapsing_header.das  color.das  color_button_hover.das  containers.das  custom_widgets.das  data_table.das  display_widgets.das  docking.das  drag.das  drawlist.das  driving_outside.das  dropdown_select.das  dynamic_fonts.das  edit_tab_item.das  editing_external.das  file_dialog.das  flat_tooltips.das  group.das  icons.das  input_numeric.das  input_text.das  item_flags.das  layout.das  layout_primitives.das  live_reload.das  log_capture.das  main_menu_bar.das  narrative_layout_tour.das  narrative_widgets.das  plot.das  popup_modal.das  popup_window.das  popups.das  recording.das  selectable_hover.das  slider.das  (+14 more)
greyprint/: command_que.das  greyprint.cpp  greyprint.das  guid_2_id.das  instructions.das  instructions_math.das  instructions_model.das  instructions_ui.das  model.das  model_eval.das  preview.das  produce.das  undo_stack.das
imgui/: imgui.h
imnodes/: imnodes.cpp  imnodes.h  imnodes_internal.h
licenses/: MD4C.txt
markdown/: imgui_markdown_model.das  imgui_markdown_text.das  imgui_markdown_tree_sitter.das  imgui_markdown_view.das
plans/: markdown-completeness.md  text-components-architecture.md
skills/: application.md  migration.md  playwright.md  recording.md
src/: aot_dasIMGUI.h  cb_dasIMGUI.h  dasIMGUI.const.inc  dasIMGUI.cpp  dasIMGUI.dummy.add.inc  dasIMGUI.enum.add.inc  dasIMGUI.enum.class.inc  dasIMGUI.enum.decl.cast.inc  dasIMGUI.enum.decl.inc  dasIMGUI.func.decl.inc  dasIMGUI.func.reg.inc  dasIMGUI.func_1.cpp  dasIMGUI.func_10.cpp  dasIMGUI.func_11.cpp  dasIMGUI.func_12.cpp  dasIMGUI.func_13.cpp  dasIMGUI.func_14.cpp  dasIMGUI.func_15.cpp  dasIMGUI.func_16.cpp  dasIMGUI.func_17.cpp  dasIMGUI.func_18.cpp  dasIMGUI.func_19.cpp  dasIMGUI.func_2.cpp  dasIMGUI.func_20.cpp  dasIMGUI.func_21.cpp  dasIMGUI.func_22.cpp  dasIMGUI.func_23.cpp  dasIMGUI.func_24.cpp  dasIMGUI.func_25.cpp  dasIMGUI.func_26.cpp  dasIMGUI.func_27.cpp  dasIMGUI.func_28.cpp  dasIMGUI.func_29.cpp  dasIMGUI.func_3.cpp  dasIMGUI.func_30.cpp  dasIMGUI.func_31.cpp  dasIMGUI.func_32.cpp  dasIMGUI.func_33.cpp  dasIMGUI.func_34.cpp  dasIMGUI.func_4.cpp  (+33 more)
terminal/: imgui_terminal.das
tests/integration/: README.md  failed_imgui_harness_lint_raw.das  failed_imgui_lint_raw.das  failed_imgui_lint_style_verbose.das  fetch_tutorial_apngs.ps1  fetch_tutorial_apngs.sh  live_driver.das  publish_apngs_to_assets.ps1  record_boost_basics.das  record_boost_narrative_layout.das  record_buttons.das  record_child.das  record_collapsing_header.das  record_color.das  record_color_button_hover.das  record_containers.das  record_custom_widgets.das  record_data_table.das  record_display_widgets.das  (+202 more)
text/: imgui_document_model.das  imgui_text_flow.das  imgui_text_source_model.das  imgui_text_source_view.das  imgui_text_tree_sitter.das
utils/: convert_recording.das  imgui2rst.das  make_icon_doc.das  prepare_recording.das  rerecord.ps1
widgets/: imgui_boost.das  imgui_boost_runtime.das  imgui_boost_v2.das  imgui_colors.das  imgui_containers_builtin.das  imgui_docking_builtin.das  imgui_drawlist_builtin.das  imgui_enums.das  imgui_file_dialog.das  imgui_fonts.das  imgui_harness.das  imgui_harness_lint.das  imgui_icons.das  imgui_id_builtin.das  imgui_layout_builtin.das  imgui_lint.das  imgui_live.das  imgui_live_core.das  imgui_playwright.das  imgui_scope_builtin.das  imgui_style_builtin.das  imgui_table_builtin.das  imgui_theme_daslang.das  imgui_transport.das  imgui_visual_aids.das  imgui_widgets_builtin.das  imgui_window_constraints_builtin.das
(+80 files in other folders)
